--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.2",
     "reset-css": "^5.0.1",
     "yup": "^0.32.11"
